# AiZO_projekt1

./: .gitignore  CMakeLists.txt
headers/data/: numberGenerator.h  presort.h  txtToArray.h
headers/sort_algorithms/: ShellSort.h  heapSort.h  insertionSort.h  quickSort.h
sources/main/: main.cpp
